# sherpa-ncnn

./: CMakeLists.txt  build-android-arm64-v8a.sh  build-android-armv7-eabi.sh  build-android-x86-64.sh  build-android-x86.sh  setup.py
.github/workflows/: android.yaml  apk.yaml  build-wheels-armv7l.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  nodejs.yaml  windows-x64.yaml
cmake/: cmake_extension.py  googletest.cmake  kaldi-native-fbank.cmake  ncnn.cmake  portaudio.cmake
sherpa-ncnn/csrc/: CMakeLists.txt  macros.h  offline-speech-denoiser-gtcrn-impl.h  offline-speech-denoiser-gtcrn-model-config.cc  offline-speech-denoiser-gtcrn-model-config.h  offline-speech-denoiser-gtcrn-model-meta-data.h  offline-speech-denoiser-gtcrn-model.cc  offline-speech-denoiser-gtcrn-model.h  offline-speech-denoiser-impl.cc  offline-speech-denoiser-impl.h  offline-speech-denoiser-model-config.cc  offline-speech-denoiser-model-config.h  offline-speech-denoiser.cc  offline-speech-denoiser.h  parse-options.cc  sherpa-ncnn-offline-denoiser.cc
